--- a/djang3ByExampleBook/c1Blog/blog/templates/blog/post/detail.html
+++ b/djang3ByExampleBook/c1Blog/blog/templates/blog/post/detail.html
@@ -8,9 +8,40 @@
   <p class="date">Published {{ post.publish }} by {{ post.author }}</p>
   {{ post.body | linebreaks }}
   <p>
-{#  You are using the namespace called blog #}
+    {#  You are using the namespace called blog #}
     <a href="{% url "blog:post_share" post.id %}">
       Share this post
     </a>
   </p>
+
+  {#  <h1>test here</h1>#}
+
+  {% with comments.count as total_comments %}
+    <h2>{{ total_comments }} comment{{ total_comments|pluralize }}</h2>
+  {% endwith %}
+
+  {% for comment in comments %}
+    <div class="comment">
+      <p class="info">
+        Comment {{ forloop.counter }} by {{ comment.name }}
+        {{ comment.created }}
+      </p>
+      {{ comment.body | linebreaks }}
+
+    </div>
+  {% empty %}
+    <p>There are no comments yet.</p>
+  {% endfor %}
+
+  {% if new_comment %}
+    <h2>Your Comment has been added.</h2>
+  {% else %}
+    <h2>Add a new comment</h2>
+    <form method="post">
+      {{ comment_form.as_p }}
+      <p><input type="submit" value="Add comment"></p>
+      {% csrf_token %}
+    </form>
+  {% endif %}
 {% endblock %}
+
