--- a/djang3ByExampleBook/c1Blog/blog/templates/blog/base.html
+++ b/djang3ByExampleBook/c1Blog/blog/templates/blog/base.html
@@ -14,9 +14,10 @@
 <div id="sidebar">
   <h2>Blogs Status</h2>
   <p>I'vew written {% total_posts %} posts so far.</p>
+  <p><a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feed</a></p>
   <h3>Latest posts</h3>
 
- {% show_latest_posts 3 %}
+  {% show_latest_posts 3 %}
 
   {#    <p>This is my blog.</p>#}
   <h3>Most commented posts</h3>
