--- a/djang3ByExampleBook/allProj/account/templates/base.html
+++ b/djang3ByExampleBook/allProj/account/templates/base.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>{% block title %}{% endblock %}</title>
-  <link href="{% static "css/base.css" %}" rel="stylesheet">
-  <link rel="icon" href="{% static "favicon.ico" %}">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="icon" href="{% static 'favicon.ico' %}">
+
 </head>
 <body>
 <div id="header">
