--- a/djang3ByExampleBook/allProj/account/static/css/base.css
+++ b/djang3ByExampleBook/allProj/account/static/css/base.css
@@ -125,11 +125,10 @@ input[type=submit], a.button {
 }
 .helptext {
     margin:0 0 20px 0;
-    color:#cc0033;
+    color:#aaa;
     clear:both;
     float:left;
     font-size:13px;
-
 }
 /* messages */
 ul.messages {
