--- a/djang3ByExampleBook/allProj/account/templates/base.html
+++ b/djang3ByExampleBook/allProj/account/templates/base.html
@@ -1,39 +1,35 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
-  <link rel="icon" href="{% static 'favicon.ico' %}">
-
+  <link href="{% static "css/base.css" %}" rel="stylesheet">
 </head>
 <body>
-<div id="header">
-  <span class="logo">Bookmarks</span>
-  {% if request.user.is_authenticated %}
-  <ul class="menu">
-    <li {% if section == 'dashboard' %} class="selected" {% endif %}>
-      <a href="{% url 'dashboard' %}">My dashboard</a>
-    </li>
-    <li {% if section == 'images' %} class="selected" {% endif %}>
-      <a href="#">Images</a>
-    </li>
-    <li {% if section == 'people' %} class="selected" {% endif %}>
-      <a href="#">People</a>
-    </li>
-  </ul>
-{% endif %}
-<span class="user">
-  {% if request.user.is_authenticated %}
-    Hello {% if request.user.first_name %} {{ request.user.first_name }} {% else %} {{ request.user }} {% endif %},
-    <a href="{% url 'logout' %}">Logout</a>
-  {% else %}
-    <a href="{% url 'login' %}">Log-in</a>
+  <div id="header">
+    <span class="logo">Bookmarks</span>
+    {% if request.user.is_authenticated %}
+    <ul class="menu">
+      <li {% if section == "dashboard" %}class="selected"{% endif %}>
+        <a href="{% url "dashboard" %}">My dashboard</a>
+      </li>
+      <li {% if section == "images" %}class="selected"{% endif %}>
+        <a href="#">Images</a>
+      </li>
+      <li {% if section == "people" %}class="selected"{% endif %}>
+        <a href="#">People</a>
+      </li>
+    </ul>
   {% endif %}
-</span>
-</div>
-
+  <span class="user">
+    {% if request.user.is_authenticated %}
+      Hello {{ request.user.first_name }},
+      <a href="{% url "logout" %}">Logout</a>
+    {% else %}
+      <a href="{% url "login" %}">Log-in</a>
+    {% endif %}
+  </span>
+  </div>
 
   {% if messages %}
     <ul class="messages">
@@ -46,9 +42,9 @@
     </ul>
   {% endif %}
 
-<div id="content">
-  {% block content %}
-  {% endblock %}
-</div>
+  <div id="content">
+    {% block content %}
+    {% endblock %}
+  </div>
 </body>
 </html>
