--- a/djang3ByExampleBook/allProj/account/templates/base.html
+++ b/djang3ByExampleBook/allProj/account/templates/base.html
@@ -4,6 +4,9 @@
 <head>
   <title>{% block title %}{% endblock %}</title>
   <link href="{% static "css/base.css" %}" rel="stylesheet">
+    <!-- jquery dependency -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 <body>
   <div id="header">
